--- a/ASPNETcore/dojoDachi/Views/Home/Index.cshtml
+++ b/ASPNETcore/dojoDachi/Views/Home/Index.cshtml
@@ -11,12 +11,12 @@
         <div class="row justify-content-md-center">
             <div class="col-sm-auto"><h3 class="fulldiv">Fullness: <span class="fullnessCount">@TempData["fullness"]</span></h3></div>
             <div class="col-sm-auto"><h3>Happiness: @TempData["happiness"]</h3></div>
-            <div class="col-sm-auto"><h3>Meals: @TempData["meals"]</h3></div>
+            <div class="col-sm-auto"><h3>Meals: <span class="mealCount">@TempData["meals"]</span></h3></div>
             <div class="col-sm-auto"><h3>Energy: @TempData["energy"]</h3></div>
         </div>
         <div class="console">
             <img src="@TempData["image"]"><br>
-            <p>@TempData["message"]</p>
+            <h4>@TempData["message"]</h4>
         </div>
         @{
             if(TempData["gameStatus"] == "playing")
@@ -24,10 +24,11 @@
                 <div class="row justify-content-md-center">
                     <div class="col-sm-auto">
                         <a class="btn btn-primary btn-lg" href="feed" role="button">Feed</a>
-                        <button class="btn btn-primary btn-lg" onclick="feed()">Feed</button>
+                        <button class="btn btn-primary btn-lg" onclick="feedtest()">Feed</button>
                     </div>
                     <div class="col-sm-auto">
                         <a class="btn btn-primary btn-lg" href="play" role="button">Play</a>
+                        <button class="btn btn-primary btn-lg" onclick="play()">Play</button>
                     </div>
                     <div class="col-sm-auto">
                         <a class="btn btn-primary btn-lg" href="work" role="button">Work</a>
